--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -6,8 +6,7 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{César Núñez Huamán} % Your name
 % You can merge both of these into a single line, if you do not have a website.
-\address{(773) 886-8445 \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu}}
-\address{ \href{https://github.com/cesarnunezh}{GitHub Profile} \\ \href{https://linkedin.com/in/cesar-nunez-huaman}{LinkedIn Profile} \\ \href{https://cesarnunezh.github.io/}{Web page}}   %
+\address{(773) 886-8445 \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu} \\ \href{https://github.com/cesarnunezh}{GitHub} \\ \href{https://linkedin.com/in/cesar-nunez-huaman}{LinkedIn} \\ \href{https://cesarnunezh.github.io/}{Web page}}
 
 \begin{document}
 
@@ -15,25 +14,14 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Education}
-    {\bf Harris School of Public Policy, University of Chicago} \hfill \textit{Chicago, IL} \\
-    \textit{MSc in Computational Analysis and Public Policy} \hfill {Expected 2026} \\
+    {\bf Harris School of Public Policy, The University of Chicago} \hfill \textit{Chicago, IL} \\
+    \textit{Master of Science in Computational Analysis and Public Policy} \hfill {June 2026 (Expected)} \\
+    Awarded the Harris Merit Scholarship
 
-    {\bf MSc in Computational Analysis and Public Policy}, The University of Chicago \hfill {June 2026 (Expected)} \\
-    First year student
-
-    \vspace{-15pt} % Reduce space between this and the next institution
-    {\bf Pontifical Catholic University of Peru} \hfill \textit{Lima, Perú} \\
-    \textit{Specialization in Data Science for Social Sciences and Public Management} \hfill {Oct 2023}\\
-
-    \vspace{-15pt} % Reduce space between this and the next institution
     {\bf University of the Pacific} \hfill \textit{Lima, Perú} \\
-    \textit{Professional licensed in Economics} \hfill {2020} \\
-    Thesis: The effect of teacher training on pedagogical practices and learning. Available \href{https://repositorio.up.edu.pe/handle/11354/2653}{here.} \\
-
-    \vspace{-15pt} % Reduce space between this and the next institution
-    \textit{Bachelor in Economics} \hfill {2018} \\
-    GPA: 15.64/20.0 | Ranked: 6 out of 68 | Concentration in economics for the public sector
-
+    \textit{Bachelor of Science in Economics} \hfill {March 2018} \\
+    Concentration in Economics for the public sector \\
+    Thesis: The effect of teacher training on pedagogical practices and learning. Available \href{https://repositorio.up.edu.pe/handle/11354/2653}{here.} 
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -41,99 +29,95 @@
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Professional experience}
 
-\textbf{Videnza Consultores} \hfill Jul 2020 - Aug 2024 \\
-\textit{Senior Analyst}  \hfill \textit{Lima, Perú}
+\textbf{Videnza Consultores} \hfill \textit{Lima, Perú} \\
+\textit{Senior Analyst}  \hfill Jul 2020 - Aug 2024
  \begin{itemize}
     \itemsep -3pt {} 
-      \item Led the execution of more than 20 consultancy projects, including the analysis of primary and secondary data.
-      \item Conducted the implementation of the Bicentennial Observatory, a repository of national and regional statistics with more than 150 indicators. \href{https://propuestasdelbicentenario.pe/observatorio/}{Available here}.
-      \item Managed data collection and implementation for a 10-month RCT on improving medical supply procurement across 140 public healthcare facilities.
+      \item Led the technical assistance in designing the Urban Poverty Reduction Strategy for the Peruvian Ministry of Development and Social Inclusion by developing a theory of change and conceptual model, using systematic and literature reviews, and principal component analysis with household survey data to ensure evidence-based, effective interventions for urban poverty reduction.
+      \item Led the implementation of the Bicentennial Observatory, a national and regional statistics repository with 150+ indicators, using census, survey, and administrative data to design indicators and develop visualizations in Python, R, and STATA, enhancing data accessibility to inform policy decisions and promote evidence-based governance. \href{https://propuestasdelbicentenario.pe/observatorio/}{Available here}.
+      \item Managed data collection and implementation for a randomized control trial to improve medical supply procurement across 140 public healthcare facilities. Designed and evaluated the impact of a behavioral science-based intervention, leading to a higher purchase award ratio and reduced supply costs.
    \end{itemize}
  
- \textbf{Peruvian Private Competitiveness Council (CPC)} \hfill Jul 2019 - Jun 2020\\
-\textit{Analyst} \hfill \textit{Lima, Perú}
+ \textbf{Peruvian Private Competitiveness Council (CPC)} \hfill \textit{Lima, Perú}\\
+\textit{Analyst} \hfill Jul 2019 - Jun 2020
  \begin{itemize}
     \itemsep -3pt {} 
-      \item Led the annually and quarterly update of the Regional Public Management Index (IRGP) measuring the performance of regional and local public management at the 25 regions of Peru. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here}
-      \item Guaranteed follow-up to the public policy proposals. More than 69 percent got into the National Competitiveness and Productivity Plan, national laws, and other areas of the public sector between 2019 and 2020
+      \item Led the annual and quarterly updates of the Regional Public Management Index (IRGP), measuring the performance of regional and local public management across Peru’s 25 regions. Utilized survey and administrative data to compute 17 key performance indicators, whose results were used to drive improvements in regional authorities’ management practices. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here}
+      \item Led the research and development of evidence-based public policy proposals to foster public-private synergies. Key initiatives included reforming regulations for infrastructure development by streamlining administrative processes to accelerate large-scale projects under Peru's National Infrastructure Plan, and designing an economic stimulus plan to expand housing subsidies during the pandemic, enhancing affordable housing access and driving economic recovery.
  \end{itemize}
 
-\textbf{AC Pública, APOYO Consultoría's subsidiary} \hfill Jan 2018 - Jul 2019\\
-\textit{Project assistant} \hfill \textit{Lima, Perú}
+\textbf{AC Pública, APOYO Consultoría's subsidiary} \hfill \textit{Lima, Perú}\\
+\textit{Project Assistant} \hfill Jan 2018 - Jul 2019
  \begin{itemize}
     \itemsep -3pt {} 
-     \item Contributed in the development and approval of the National Agrarian Innovation Policy and Plan
-     \item Led the updating of supply and demand estimates for 12 regional airports’ Master Development Plans
+     \item Contributed to the development and approval of the National Agrarian Innovation Policy and Plan by analyzing survey and census data, conducting literature and economic research, and performing field qualitative work to inform policy decisions and ensure alignment with national development goals.
+     \item Directed the revision of supply and demand estimates for 12 regional airports’ Master Development Plans, utilizing econometric modeling to enhance accuracy, ensuring compliance with regulatory standards, and driving strategic planning for sustainable infrastructure growth.
  \end{itemize}
 \end{rSection} 
 
 %----------------------------------------------------------------------------------------
-% TECHINICAL STRENGTHS	
+% CERTIFICATIONS
 %----------------------------------------------------------------------------------------
-\begin{rSection}{Languages}
-    \begin{minipage}[t]{0.48\textwidth}
-        \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-            Spanish & Native \\
-            English & Advanced
-        \end{tabular}
-    \end{minipage}%
-    \hfill
-    \begin{minipage}[t]{0.48\textwidth}
-        \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-            French & Basic
-        \end{tabular}
-    \end{minipage}
-\end{rSection}
+\pagebreak
+\begin{rSection}{Certificates and Specializations}
+    {\bf Massachusetts  Institute  of  Technology  -  MIT} \hfill \textit{Remote} \\
+    \textit{MicroMasters Program on Data, Economics and Development Policy} \hfill {2025 (Expected)}
 
-\begin{rSection}{Programming languages and Technical software}
-    \begin{minipage}[t]{0.48\textwidth}
-        \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-            R & Intermediate \\
-            Python & Intermediate \\
-            STATA & Advanced
-        \end{tabular}
-    \end{minipage}%
-    \hfill
-    \begin{minipage}[t]{0.48\textwidth}
-        \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-            Latex & Basic \\
-            Git & Intermediate \\
-            Microsoft Excel & Advanced
-        \end{tabular}
-    \end{minipage}
+    {\bf Pontifical Catholic University of Peru} \hfill \textit{Lima, Perú} \\
+    \textit{Specialization in Data Science for Social Sciences and Public Management} \hfill {2023}
+
+    % {\bf Pontifical Catholic University of Peru} \hfill \textit{Lima, Perú} \\
+    % \textit{Governance, Political Management and Public Management Program} \hfill {2021}
+
+    {\bf \textit{Grupo de Análisis para el Desarrollo} - GRADE} \hfill \textit{Lima, Perú} \\
+    \textit{Social Program Evaluation Certiicate} \hfill {2019}
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-%	TEACHING EXPERIENCE
+% SKILLS
 %----------------------------------------------------------------------------------------
+\begin{rSection}{Skills} 
+    \textbf{Programming Languages:} Python, R, STATA, HTML \\
+    \textbf{Technical software:} Latex, Git, GitHub, QGIS, MS Excel \\
+    \textbf{Spoken Languages:} Spanish (Native), English (Advanced), French (Basic)
+\end{rSection}
 
+%----------------------------------------------------------------------------------------
+% TEACHING EXPERIENCE
+%----------------------------------------------------------------------------------------
 \begin{rSection}{Teaching experience}
+{\bf Videnza School of Management}  \hfill {2024}\\
+Conducted sessions to explore how artificial intelligence can improve public sector management by enhancing decision-making and driving innovative, citizen-focused solutions.
 
 {\bf University of the Pacífic}  \hfill {2016 - 2023}\\
-I've been teaching assistant in the following courses:
-\begin{itemize}
-    \itemsep -3pt {}
-    \item Introduction to Microeconomics (Aug 2016 - Dec 2018)
-    \item Microeconomics I (Aug 2017 - Dec 2017)
-    \item Introduction to Macroeconomics (Aug 2019 - Dec 2023)
-\end{itemize}
-
+Teaching Assistant for the following course: Introduction to Microeconomics (5 semesters), Microeconomics I (1 semester), Introduction to Macroeconomics (9 semesters)
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
-% PROYECTOS Y PUBLICACIONES	
+% PUBLICATIONS
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Publications}
-During my professional experience I have contributed to the following publications:
-\item Bustamante, P. (2022) \emph{The Necessary Social Viability for the Sustainable Development of Mining}. En L. M. Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development} (pp. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.}
-\item Bustamante, P. (2024) \emph{Value Generation, Social Profitability, and Conflict in the Context of Mining Projects in Peru}. Discussion Paper. Lima: Inter-American Development Bank. Available \href{https://publications.iadb.org/es/generacion-de-valor-rentabilidad-social-y-conflictividad-en-el-entorno-de-proyectos-mineros-en-peru}{here.}
-\item Castilla, L. M. (2021) \emph{Economic Reactivation for Sustained Growth}. En L. M. Castilla et al (2021), \textit{Bicentennial Proposals: Pathways for a Developing Country} (pp. 29-64). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786124272813/12336851}{here.}
-\item Castilla, L. M. (2022) \emph{Productive Linkages and Regional Development: The Case of Mining}.  En L. M. Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development} (pp. 215-241). Lima: Penguin Random House. Available \href{https://www.casadellibro.com/ebook-propuestas-del-bicentenario-ebook/9786125068026/13125397}{here.}
-\item Private Council for Competitiveness (2019). \emph{Competitiveness Report 2020}. Lima: Private Council for Competitiveness. Available \href{https://www.compite.pe/wp-content/uploads/2019/11/CPC_Peru_INC-2020_Libro-Web-Paginas.pdf}{here.}
-\item Private Council for Competitiveness (2020). \emph{Competitiveness Report 2021}. Lima: Private Council for Competitiveness. Available \href{https://www.compite.pe/wp-content/uploads/2021/01/Informe-de-Competitividad-2021-CPC.pdf}{here.}
-\item Videnza Institute (2024). \emph{Early Childhood Development: A Strategic Investment for the Future}. Lima: Bicentennial Proposals. Available \href{https://propuestasdelbicentenario.pe/wp-content/uploads/2024/08/Informe-de-desarrollo-infantil-temprano.pdf}{here.}
-\item Videnza Institute (2024). \emph{Urban Poverty: A Challenge for Social Policies}. Lima: Bicentennial Proposals. Available \href{https://propuestasdelbicentenario.pe/wp-content/uploads/2024/08/Pobreza-urbana_un-desafio-para-las-politicas-sociales.pdf}{here.}
+Contributed to the following publications:
+\item Bustamante, P. (2022) \emph{The Necessary Social Viability for the Sustainable Development of Mining}. En Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development}. Lima: Penguin Random House. Available \href{https://books.google.com/books/about/Propuestas_del_bicentenario.html?id=nfF3EAAAQBAJ}{here.}
+\item Bustamante, P. (2024) \emph{Value Generation, Social Profitability, and Conflict in the Context of Mining Projects in Peru}. Discussion Paper. Lima: Inter-American Development Bank. DOI: \href{http://dx.doi.org/10.18235/0012949}{http://dx.doi.org/10.18235/0012949}.
+\item Castilla, L. M. (2021) \emph{Economic Reactivation for Sustained Growth}. En Castilla et al (2021), \textit{Bicentennial Proposals: Pathways for a Developing Country} (pp. 29-64). Lima: Penguin Random House. Available \href{https://www.google.com/books/edition/_/3UanzgEACAAJ?hl=es&sa=X&ved=2ahUKEwjHq8K_jvmJAxVBvokEHUT-ERcQre8FegQIFRAC}{here.}
+\item Castilla, L. M. (2022) \emph{Productive Linkages and Regional Development: The Case of Mining}.  En Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development} (pp. 215-241). Lima: Penguin Random House. Available \href{https://books.google.com/books/about/Propuestas_del_bicentenario.html?id=nfF3EAAAQBAJ}{here.}
+\item Videnza Institute (2024). \emph{Early Childhood Development: A Strategic Investment for the Future}. Available \href{https://propuestasdelbicentenario.pe/wp-content/uploads/2024/08/Informe-de-desarrollo-infantil-temprano.pdf}{here.}
+\item Videnza Institute (2024). \emph{Urban Poverty: A Challenge for Social Policies}. Available \href{https://propuestasdelbicentenario.pe/wp-content/uploads/2024/08/Pobreza-urbana_un-desafio-para-las-politicas-sociales.pdf}{here.}
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+% EXTRACURRICULAR ACTIVITIES
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Extra curricular activities and distinctions}
+    \begin{itemize}
+        \item \textbf{Latin American Matters (LAM) 2024}. LAM is a Harris Student Organization that seeks to promote the discussion and better understanding of economic, social and political issues in Latin American countries through a public policy approach. Member of the Carreer Development Board.
+        \item \textbf{Bicentennial Generation Scholarship 2024}. Awarded by the Peruvian Government as part of an annual national scholarship program recognizing academic excellence. Achieved first place in the 2024 edition.
+        \item \textbf{EvalYouth Global Mentoring Program (EY-GMP) 2020-2021}. The EY-GMP is an initiative to support novice evaluators and young professionals to become skilled and trusted professionals who can confidently undertake evaluation roles in their communities and countries. 
+        \item \textbf{Impacta! Young people for public management 2019-2020}. Impacta is a non-profit civil association, directed and made up of young people convinced that to achieve the full development of a country it is necessary to have solid, transparent public institutions capable of responding efficiently to the needs of its citizens.
+    \end{itemize}
 \end{rSection}
 
 \end{document}
