--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -6,7 +6,8 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{César Núñez Huamán} % Your name
 % You can merge both of these into a single line, if you do not have a website.
-\address{(773) 886-8445 \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu} \\ \href{https://github.com/cesarnunezh}{GitHub} \\ \href{https://linkedin.com/in/cesar-nunez-huaman}{LinkedIn} \\ \href{https://cesarnunezh.github.io/}{Web page}}
+\address{(773) 886-8445 \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu} \\ \href{https://github.com/cesarnunezh}{GitHub} \\ \href{https://linkedin.com/in/cesar-nunez-huaman}{LinkedIn}}
+%\address{(773) 886-8445 \\ \href{mailto:cnunezh@uchicago.edu}{cnunezh@uchicago.edu} \\ \href{https://github.com/cesarnunezh}{GitHub} \\ \href{https://linkedin.com/in/cesar-nunez-huaman}{LinkedIn} \\ \href{https://cesarnunezh.github.io/}{Web page}}
 
 \begin{document}
 
