--- a/CV/resume_CNH_eng.tex
+++ b/CV/resume_CNH_eng.tex
@@ -17,12 +17,12 @@
 \begin{rSection}{Education}
     {\bf Harris School of Public Policy, The University of Chicago} \hfill \textit{Chicago, IL} \\
     \textit{Master of Science in Computational Analysis and Public Policy} \hfill {June 2026 (Expected)} \\
-    Awarded the Harris Merit Scholarship
+    Awarded the Harris Merit Scholarship for 2024-2026.
 
     {\bf University of the Pacific} \hfill \textit{Lima, Perú} \\
     \textit{Bachelor of Science in Economics} \hfill {March 2018} \\
-    Concentration in Economics for the public sector \\
-    Thesis: The effect of teacher training on pedagogical practices and learning. Available \href{https://repositorio.up.edu.pe/handle/11354/2653}{here.} 
+    Concentration in Economics for the public sector
+    % Thesis: The effect of teacher training on pedagogical practices and learning. Available \href{https://repositorio.up.edu.pe/handle/11354/2653}{here.} 
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -34,17 +34,17 @@
 \textit{Senior Analyst}  \hfill Jul 2020 - Aug 2024
  \begin{itemize}
     \itemsep -3pt {} 
-      \item Led the technical assistance in designing the Urban Poverty Reduction Strategy for the Peruvian Ministry of Development and Social Inclusion by developing a theory of change and conceptual model, using systematic and literature reviews of 50+ articles, and principal component analysis with household survey data (with +500k observations) to ensure evidence-based, effective interventions for urban poverty reduction.
-      \item Led the implementation of the Bicentennial Observatory, a national and regional statistics repository with 150+ indicators, using census, survey, and administrative data to design indicators and develop visualizations in Python, R, and STATA, enhancing data accessibility to inform policy decisions and promote evidence-based governance. \href{https://propuestasdelbicentenario.pe/observatorio/}{Available here}.
-      \item Managed data collection and implementation for a randomized control trial to improve medical supply procurement across 140 public healthcare facilities. Designed and evaluated the impact of a behavioral science-based intervention, leading to a higher purchase award ratio and reduced supply costs.
+      \item Led the technical assistance in designing the Urban Poverty Reduction Strategy for the Peruvian Ministry of Development and Social Inclusion by developing a theory of change and conceptual model, using systematic and literature reviews of 50+ articles, and principal component analysis with household survey data (with +500k observations) to ensure evidence-based, effective interventions for urban poverty reduction. \\ \textbf{Tools:} Python, Pandas, Geopandas, R, Tidyverse, Principal Component Analysis. 
+      \item Led the implementation of the Bicentennial Observatory, a national and regional statistics repository with 150+ indicators, using census, survey, and administrative data to design indicators and develop visualizations in Python, R, and STATA, enhancing data accessibility to inform policy decisions and promote evidence-based governance. \href{https://propuestasdelbicentenario.pe/observatorio/}{Available here}. \\ \textbf{Tools:} Python, Pandas, Selenium, R, STATA. 
+      \item Managed data collection and implementation for a randomized control trial to improve medical supply procurement across 140 public healthcare facilities. Designed and evaluated the impact of a behavioral science-based intervention, leading to a higher purchase award ratio and reduced supply costs. \\ \textbf{Tools:} STATA. 
    \end{itemize}
  
  \textbf{Peruvian Private Competitiveness Council (CPC)} \hfill \textit{Lima, Perú}\\
 \textit{Analyst} \hfill Jul 2019 - Jun 2020
  \begin{itemize}
     \itemsep -3pt {} 
-      \item Led the annual and quarterly updates of the Regional Public Management Index (IRGP), measuring the performance of regional and local public management across Peru’s 25 regions. Utilized survey and administrative data to compute 17 key performance indicators, whose results were used to drive improvements in regional authorities’ management practices. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here}
-      \item Led the research and development of evidence-based public policy proposals to foster public-private synergies. Key initiatives included reforming regulations for infrastructure development by streamlining administrative processes to accelerate large-scale projects under Peru's National Infrastructure Plan, and designing an economic stimulus plan to expand housing subsidies during the pandemic, enhancing affordable housing access and driving economic recovery.
+      \item Led the annual and quarterly updates of the Regional Public Management Index (IRGP), measuring the performance of regional and local public management across Peru’s 25 regions. Utilized survey and administrative data to compute 17 key performance indicators, whose results were used to drive improvements in regional authorities’ management practices. Available \href{https://www.compite.pe/wp-content/uploads/2020/07/IRGP-2020-version-final.pdf}{here} \\ \textbf{Tools:} STATA. 
+      \item Led the research and development of evidence-based public policy proposals to foster public-private synergies. Key initiatives included reforming regulations for infrastructure development by streamlining administrative processes to accelerate large-scale projects under Peru's National Infrastructure Plan, and designing an economic stimulus plan to expand housing subsidies during the pandemic, enhancing affordable housing access and driving economic recovery. 
  \end{itemize}
 
 \textbf{AC Pública, APOYO Consultoría's subsidiary} \hfill \textit{Lima, Perú}\\
@@ -55,40 +55,46 @@
      \item Directed the revision of supply and demand estimates for 12 regional airports’ Master Development Plans, utilizing econometric modeling to enhance accuracy, ensuring compliance with regulatory standards, and driving strategic planning for sustainable infrastructure growth.
  \end{itemize}
 \end{rSection} 
+\pagebreak
+%----------------------------------------------------------------------------------------
+% SKILLS
+%----------------------------------------------------------------------------------------
+\begin{rSection}{Skills}
+    \begin{tabular}{@{} l l @{}}
+    \textbf{Programming Languages:} & Python, R, HTML, LaTeX \\
+    \textbf{Data Manipulation:} & Pandas, NumPy, Tidyverse\\
+    \textbf{Web Scraping:} & httpx, lxml.html, BeautifulSoup, Selenium \\
+    \textbf{Data Visualization:} & Seaborn, Folium, GeoPandas, Shiny, ggplot2 \\
+    \textbf{Database \& Version Control:} & Git, SQL \\
+    \textbf{Machine Learning:} & Scikit-Learn, TensorFlow \\
+    \textbf{Natural Language Processing:} & NLTK, VADER \\
+    \textbf{Statistical Analysis:} & STATA, R \\
+    \textbf{Language Proficiency:} & Spanish (Native), English (Advanced), French (Basic)
+    \end{tabular}
+    \end{rSection}
 
 %----------------------------------------------------------------------------------------
 % CERTIFICATIONS
 %----------------------------------------------------------------------------------------
-\pagebreak
 \begin{rSection}{Certificates and Specializations}
     {\bf Massachusetts  Institute  of  Technology  -  MIT} \hfill \textit{Remote} \\
-    \textit{MicroMasters Program on Data, Economics and Development Policy} \hfill {2025 (Expected)}
+    \textit{MicroMasters Program on Data, Economics and Development Policy} \hfill {2025 (Expected)} 
 
     {\bf Pontifical Catholic University of Peru} \hfill \textit{Lima, Perú} \\
-    \textit{Specialization in Data Science for Social Sciences and Public Management} \hfill {2023}
-
+    \textit{Specialization in Data Science for Social Sciences and Public Management} \hfill {2023} \\
+    Coursework: Python, R, Machine Learning, Deep Learning and Natural Language Processing
     % {\bf Pontifical Catholic University of Peru} \hfill \textit{Lima, Perú} \\
     % \textit{Governance, Political Management and Public Management Program} \hfill {2021}
-
-    {\bf \textit{Grupo de Análisis para el Desarrollo} - GRADE} \hfill \textit{Lima, Perú} \\
-    \textit{Social Program Evaluation Certiicate} \hfill {2019}
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-% SKILLS
-%----------------------------------------------------------------------------------------
-\begin{rSection}{Skills} 
-    \textbf{Programming Languages:} Python, R, STATA, HTML\\
-    \textbf{Technical skills:} Latex, Git, Linux, SQL, QGIS, Machine Learning, Natural Language Processing \\
-    \textbf{Spoken Languages:} Spanish (Native), English (Advanced), French (Basic)
+    % {\bf \textit{Grupo de Análisis para el Desarrollo} - GRADE} \hfill \textit{Lima, Perú} \\
+    % \textit{Social Program Evaluation Certiicate} \hfill {2019}
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
 % TEACHING EXPERIENCE
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Teaching experience}
-{\bf Videnza School of Management}  \hfill {2024}\\
-Conducted sessions to explore how artificial intelligence can improve public sector management by enhancing decision-making and driving innovative, citizen-focused solutions.
+% {\bf Videnza School of Management}  \hfill {2024}\\
+% Conducted sessions to explore how artificial intelligence can improve public sector management by enhancing decision-making and driving innovative, citizen-focused solutions.
 
 {\bf University of the Pacífic}  \hfill {2016 - 2023}\\
 Teaching Assistant for the following course: Introduction to Microeconomics (5 semesters), Microeconomics I (1 semester), Introduction to Macroeconomics (9 semesters)
@@ -100,9 +106,9 @@ Teaching Assistant for the following course: Introduction to Microeconomics (5 s
 
 \begin{rSection}{Publications}
 Contributed to the following publications:
-\item Bustamante, P. (2022) \emph{The Necessary Social Viability for the Sustainable Development of Mining}. En Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development}. Lima: Penguin Random House. Available \href{https://books.google.com/books/about/Propuestas_del_bicentenario.html?id=nfF3EAAAQBAJ}{here.}
+% \item Bustamante, P. (2022) \emph{The Necessary Social Viability for the Sustainable Development of Mining}. En Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development}. Lima: Penguin Random House. Available \href{https://books.google.com/books/about/Propuestas_del_bicentenario.html?id=nfF3EAAAQBAJ}{here.}
 \item Bustamante, P. (2024) \emph{Value Generation, Social Profitability, and Conflict in the Context of Mining Projects in Peru}. Discussion Paper. Lima: Inter-American Development Bank. DOI: \href{http://dx.doi.org/10.18235/0012949}{http://dx.doi.org/10.18235/0012949}.
-\item Castilla, L. M. (2021) \emph{Economic Reactivation for Sustained Growth}. En Castilla et al (2021), \textit{Bicentennial Proposals: Pathways for a Developing Country} (pp. 29-64). Lima: Penguin Random House. Available \href{https://www.google.com/books/edition/_/3UanzgEACAAJ?hl=es&sa=X&ved=2ahUKEwjHq8K_jvmJAxVBvokEHUT-ERcQre8FegQIFRAC}{here.}
+% \item Castilla, L. M. (2021) \emph{Economic Reactivation for Sustained Growth}. En Castilla et al (2021), \textit{Bicentennial Proposals: Pathways for a Developing Country} (pp. 29-64). Lima: Penguin Random House. Available \href{https://www.google.com/books/edition/_/3UanzgEACAAJ?hl=es&sa=X&ved=2ahUKEwjHq8K_jvmJAxVBvokEHUT-ERcQre8FegQIFRAC}{here.}
 \item Castilla, L. M. (2022) \emph{Productive Linkages and Regional Development: The Case of Mining}.  En Castilla et al (2022), \textit{Bicentennial Proposals: Pathways for Regional Development} (pp. 215-241). Lima: Penguin Random House. Available \href{https://books.google.com/books/about/Propuestas_del_bicentenario.html?id=nfF3EAAAQBAJ}{here.}
 \item Videnza Institute (2024). \emph{Early Childhood Development: A Strategic Investment for the Future}. Available \href{https://propuestasdelbicentenario.pe/wp-content/uploads/2024/08/Informe-de-desarrollo-infantil-temprano.pdf}{here.}
 \item Videnza Institute (2024). \emph{Urban Poverty: A Challenge for Social Policies}. Available \href{https://propuestasdelbicentenario.pe/wp-content/uploads/2024/08/Pobreza-urbana_un-desafio-para-las-politicas-sociales.pdf}{here.}
