--- a/CV/resume_CNH_esp.tex
+++ b/CV/resume_CNH_esp.tex
@@ -80,7 +80,7 @@ Tercio superior. Concentración en economía para el sector público.
     \end{itemize}
 
     \textbf{Instituto Peruano de Economía (IPE)} \hfill Lima, Perú\\
-    \textit{Practicante} \hfill \textit{Dic 2016 - Mar 2017}
+    \textit{Practicante} \hfill \textit{May 2016 - Nov 2016}
     \begin{itemize}
         \itemsep -3pt {} 
         \item Elaboración de reportes mensuales a los asociados y de coyuntura económica regional. 
